<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_list_dogs"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ListDogsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ProgressBar
                android:id="@+id/progress"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="8dp"
                android:visibility="gone"/>

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/view_dogs"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="65dp"
                tools:listitem="@layout/view_dog"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="4">
        </androidx.recyclerview.widget.RecyclerView>


        <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/navigation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="0dp"
                android:layout_marginStart="0dp"
                android:background="?android:attr/windowBackground"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:labelVisibilityMode="labeled"
                app:menu="@menu/navigation"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
            android:id="@+id/expanded_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/activity_horizontal_margin"
            android:background="@color/background_transparent"
            android:visibility="invisible">

        <ImageView
                android:id="@+id/expanded_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:contentDescription="@string/app_name" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>