<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/button_logout"
            android:icon="@android:drawable/presence_offline"
            android:title="@string/logout"/>

</menu>
